--- a/.gitignore
+++ b/.gitignore
@@ -13,24 +13,24 @@
 !/log/.keep
 !/tmp/.keep
 
-# Ignore pidfiles, but keep the directory.
-/tmp/pids/*
-!/tmp/pids/
-!/tmp/pids/.keep
+# # Ignore pidfiles, but keep the directory.
+# /tmp/pids/*
+# !/tmp/pids/
+# !/tmp/pids/.keep
 
-# Ignore uploaded files in development.
-/storage/*
-!/storage/.keep
+# # Ignore uploaded files in development.
+# /storage/*
+# !/storage/.keep
 
-/public/assets
-.byebug_history
+# /public/assets
+# .byebug_history
 
 # Ignore master key for decrypting credentials and more.
-/config/master.key
+# /config/master.key
 
-/public/packs
-/public/packs-test
+# /public/packs
+# /public/packs-test
 /node_modules
-/yarn-error.log
-yarn-debug.log*
-.yarn-integrity
+# /yarn-error.log
+# yarn-debug.log*
+# .yarn-integrity
